[package]
name = "paltoquet"
description = "A library of rule-based general-purpose tokenizers."
version = "0.2.2"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/paltoquet"
homepage = "https://github.com/medialab/paltoquet"
repository = "https://github.com/medialab/paltoquet"
readme = "README.md"
authors = [
  "Guillaume Plique <guillaume.plique@sciencespo.fr>"
]

[dependencies]
lazy_static = "1.4.0"
regex = "1.10.3"

[dev-dependencies]
pretty_assertions = "1.4.0"
