[package]
name = "paltoquet"
description = "A library of rule-based general-purpose tokenizers."
version = "0.6.1"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/paltoquet"
homepage = "https://github.com/medialab/paltoquet"
repository = "https://github.com/medialab/paltoquet"
readme = "README.md"
authors = [
  "Guillaume Plique <guillaume.plique@sciencespo.fr>"
]

[dependencies]
enumset = "1.1.5"
lazy_static = "1.4.0"
regex-automata = "0.4.7"
regex-syntax = "0.8.4"
unidecode = "0.3.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
